parser.out
Grammar:

Rule 0     S' -> prog
Rule 1     prog -> listeInstructions
Rule 2     listeInstructions -> instruction listeInstructions
Rule 3     listeInstructions -> instruction
Rule 4     instruction -> type IDENTIFIANT ( listeParamsOpt ) bloc
Rule 5     instruction -> IDENTIFIANT ( listeArgsOpt ) ;
Rule 6     instruction -> RETOURNER expr ;
Rule 7     instruction -> TANTQUE ( expr ) bloc
Rule 8     instruction -> SI ( expr ) bloc SINON bloc
Rule 9     instruction -> SI ( expr ) bloc
Rule 10    instruction -> type IDENTIFIANT = expr ;
Rule 11    instruction -> IDENTIFIANT = expr ;
Rule 12    instruction -> type IDENTIFIANT ;
Rule 13    instruction -> ECRIRE ( CHAINE ) ;
Rule 14    instruction -> ECRIRE ( expr ) ;
Rule 15    expr -> expr_booleen
Rule 16    expr_booleen -> expr_arith SUPERIEUR_OU_EGAL expr_arith  [precedence=nonassoc, level=5]
Rule 17    expr_booleen -> expr_arith INFERIEUR_OU_EGAL expr_arith  [precedence=nonassoc, level=5]
Rule 18    expr_booleen -> expr_arith > expr_arith  [precedence=nonassoc, level=5]
Rule 19    expr_booleen -> expr_arith < expr_arith  [precedence=nonassoc, level=5]
Rule 20    expr_booleen -> expr_arith DIFFERENT expr_arith  [precedence=nonassoc, level=5]
Rule 21    expr_booleen -> expr_arith EGAL_EGAL expr_arith  [precedence=nonassoc, level=5]
Rule 22    expr_booleen -> expr_booleen OU expr_booleen  [precedence=left, level=2]
Rule 23    expr_booleen -> expr_booleen ET expr_booleen  [precedence=left, level=3]
Rule 24    expr_booleen -> NON expr_booleen  [precedence=right, level=4]
Rule 25    expr_booleen -> FAUX
Rule 26    expr_booleen -> VRAI
Rule 27    expr_booleen -> expr_arith
Rule 28    expr_arith -> somme
Rule 29    somme -> produit
Rule 30    somme -> somme - produit  [precedence=left, level=6]
Rule 31    somme -> somme + produit  [precedence=left, level=6]
Rule 32    produit -> facteur
Rule 33    produit -> produit % facteur  [precedence=left, level=7]
Rule 34    produit -> produit / facteur  [precedence=left, level=7]
Rule 35    produit -> produit * facteur  [precedence=left, level=7]
Rule 36    facteur -> IDENTIFIANT ( listeArgsOpt )
Rule 37    facteur -> LIRE ( )
Rule 38    facteur -> IDENTIFIANT
Rule 39    facteur -> ENTIER
Rule 40    facteur -> ( expr )
Rule 41    facteur -> - facteur  [precedence=right, level=1]
Rule 42    type -> BOOLEEN_TYPE
Rule 43    type -> ENTIER_TYPE
Rule 44    bloc -> { listeInstructions }
Rule 45    listeArgs -> listeArgs , expr
Rule 46    listeArgs -> expr
Rule 47    listeArgsOpt -> listeArgs
Rule 48    listeArgsOpt -> <empty>
Rule 49    listeParamsOpt -> listeParams
Rule 50    listeParamsOpt -> <empty>
Rule 51    listeParams -> listeParams , type IDENTIFIANT
Rule 52    listeParams -> type IDENTIFIANT

Unused terminals:

    FONCTION

Terminals, with rules where they appear:

%                    : 33
(                    : 4 5 7 8 9 13 14 36 37 40
)                    : 4 5 7 8 9 13 14 36 37 40
*                    : 35
+                    : 31
,                    : 45 51
-                    : 30 41
/                    : 34
;                    : 5 6 10 11 12 13 14
<                    : 19
=                    : 10 11
>                    : 18
BOOLEEN_TYPE         : 42
CHAINE               : 13
DIFFERENT            : 20
ECRIRE               : 13 14
EGAL_EGAL            : 21
ENTIER               : 39
ENTIER_TYPE          : 43
ET                   : 23
FAUX                 : 25
FONCTION             : 
IDENTIFIANT          : 4 5 10 11 12 36 38 51 52
INFERIEUR_OU_EGAL    : 17
LIRE                 : 37
NON                  : 24
OU                   : 22
RETOURNER            : 6
SI                   : 8 9
SINON                : 8
SUPERIEUR_OU_EGAL    : 16
TANTQUE              : 7
VRAI                 : 26
error                : 
{                    : 44
}                    : 44

Nonterminals, with rules where they appear:

bloc                 : 4 7 8 8 9
expr                 : 6 7 8 9 10 11 14 40 45 46
expr_arith           : 16 16 17 17 18 18 19 19 20 20 21 21 27
expr_booleen         : 15 22 22 23 23 24
facteur              : 32 33 34 35 41
instruction          : 2 3
listeArgs            : 45 47
listeArgsOpt         : 5 36
listeInstructions    : 1 2 44
listeParams          : 49 51
listeParamsOpt       : 4
produit              : 29 30 31 33 34 35
prog                 : 0
somme                : 28 30 31
type                 : 4 10 12 51 52


state 0

    (0) S' -> . prog
    (1) prog -> . listeInstructions
    (2) listeInstructions -> . instruction listeInstructions
    (3) listeInstructions -> . instruction
    (4) instruction -> . type IDENTIFIANT ( listeParamsOpt ) bloc
    (5) instruction -> . IDENTIFIANT ( listeArgsOpt ) ;
    (6) instruction -> . RETOURNER expr ;
    (7) instruction -> . TANTQUE ( expr ) bloc
    (8) instruction -> . SI ( expr ) bloc SINON bloc
    (9) instruction -> . SI ( expr ) bloc
    (10) instruction -> . type IDENTIFIANT = expr ;
    (11) instruction -> . IDENTIFIANT = expr ;
    (12) instruction -> . type IDENTIFIANT ;
    (13) instruction -> . ECRIRE ( CHAINE ) ;
    (14) instruction -> . ECRIRE ( expr ) ;
    (42) type -> . BOOLEEN_TYPE
    (43) type -> . ENTIER_TYPE
    IDENTIFIANT     shift and go to state 5
    RETOURNER       shift and go to state 6
    TANTQUE         shift and go to state 7
    SI              shift and go to state 8
    ECRIRE          shift and go to state 9
    BOOLEEN_TYPE    shift and go to state 10
    ENTIER_TYPE     shift and go to state 11

    prog                           shift and go to state 1
    listeInstructions              shift and go to state 2
    instruction                    shift and go to state 3
    type                           shift and go to state 4

state 1

    (0) S' -> prog .


state 2

    (1) prog -> listeInstructions .
    $end            reduce using rule 1 (prog -> listeInstructions .)


state 3

    (2) listeInstructions -> instruction . listeInstructions
    (3) listeInstructions -> instruction .
    (2) listeInstructions -> . instruction listeInstructions
    (3) listeInstructions -> . instruction
    (4) instruction -> . type IDENTIFIANT ( listeParamsOpt ) bloc
    (5) instruction -> . IDENTIFIANT ( listeArgsOpt ) ;
    (6) instruction -> . RETOURNER expr ;
    (7) instruction -> . TANTQUE ( expr ) bloc
    (8) instruction -> . SI ( expr ) bloc SINON bloc
    (9) instruction -> . SI ( expr ) bloc
    (10) instruction -> . type IDENTIFIANT = expr ;
    (11) instruction -> . IDENTIFIANT = expr ;
    (12) instruction -> . type IDENTIFIANT ;
    (13) instruction -> . ECRIRE ( CHAINE ) ;
    (14) instruction -> . ECRIRE ( expr ) ;
    (42) type -> . BOOLEEN_TYPE
    (43) type -> . ENTIER_TYPE
    $end            reduce using rule 3 (listeInstructions -> instruction .)
    }               reduce using rule 3 (listeInstructions -> instruction .)
    IDENTIFIANT     shift and go to state 5
    RETOURNER       shift and go to state 6
    TANTQUE         shift and go to state 7
    SI              shift and go to state 8
    ECRIRE          shift and go to state 9
    BOOLEEN_TYPE    shift and go to state 10
    ENTIER_TYPE     shift and go to state 11

    instruction                    shift and go to state 3
    listeInstructions              shift and go to state 12
    type                           shift and go to state 4

state 4

    (4) instruction -> type . IDENTIFIANT ( listeParamsOpt ) bloc
    (10) instruction -> type . IDENTIFIANT = expr ;
    (12) instruction -> type . IDENTIFIANT ;
    IDENTIFIANT     shift and go to state 13


state 5

    (5) instruction -> IDENTIFIANT . ( listeArgsOpt ) ;
    (11) instruction -> IDENTIFIANT . = expr ;
    (               shift and go to state 14
    =               shift and go to state 15


state 6

    (6) instruction -> RETOURNER . expr ;
    (15) expr -> . expr_booleen
    (16) expr_booleen -> . expr_arith SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> . expr_arith INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> . expr_arith > expr_arith
    (19) expr_booleen -> . expr_arith < expr_arith
    (20) expr_booleen -> . expr_arith DIFFERENT expr_arith
    (21) expr_booleen -> . expr_arith EGAL_EGAL expr_arith
    (22) expr_booleen -> . expr_booleen OU expr_booleen
    (23) expr_booleen -> . expr_booleen ET expr_booleen
    (24) expr_booleen -> . NON expr_booleen
    (25) expr_booleen -> . FAUX
    (26) expr_booleen -> . VRAI
    (27) expr_booleen -> . expr_arith
    (28) expr_arith -> . somme
    (29) somme -> . produit
    (30) somme -> . somme - produit
    (31) somme -> . somme + produit
    (32) produit -> . facteur
    (33) produit -> . produit % facteur
    (34) produit -> . produit / facteur
    (35) produit -> . produit * facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    NON             shift and go to state 19
    FAUX            shift and go to state 20
    VRAI            shift and go to state 21
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    expr                           shift and go to state 16
    expr_booleen                   shift and go to state 17
    expr_arith                     shift and go to state 18
    somme                          shift and go to state 22
    produit                        shift and go to state 23
    facteur                        shift and go to state 25

state 7

    (7) instruction -> TANTQUE . ( expr ) bloc
    (               shift and go to state 30


state 8

    (8) instruction -> SI . ( expr ) bloc SINON bloc
    (9) instruction -> SI . ( expr ) bloc
    (               shift and go to state 31


state 9

    (13) instruction -> ECRIRE . ( CHAINE ) ;
    (14) instruction -> ECRIRE . ( expr ) ;
    (               shift and go to state 32


state 10

    (42) type -> BOOLEEN_TYPE .
    IDENTIFIANT     reduce using rule 42 (type -> BOOLEEN_TYPE .)


state 11

    (43) type -> ENTIER_TYPE .
    IDENTIFIANT     reduce using rule 43 (type -> ENTIER_TYPE .)


state 12

    (2) listeInstructions -> instruction listeInstructions .
    $end            reduce using rule 2 (listeInstructions -> instruction listeInstructions .)
    }               reduce using rule 2 (listeInstructions -> instruction listeInstructions .)


state 13

    (4) instruction -> type IDENTIFIANT . ( listeParamsOpt ) bloc
    (10) instruction -> type IDENTIFIANT . = expr ;
    (12) instruction -> type IDENTIFIANT . ;
    (               shift and go to state 33
    =               shift and go to state 34
    ;               shift and go to state 35


state 14

    (5) instruction -> IDENTIFIANT ( . listeArgsOpt ) ;
    (47) listeArgsOpt -> . listeArgs
    (48) listeArgsOpt -> .
    (45) listeArgs -> . listeArgs , expr
    (46) listeArgs -> . expr
    (15) expr -> . expr_booleen
    (16) expr_booleen -> . expr_arith SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> . expr_arith INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> . expr_arith > expr_arith
    (19) expr_booleen -> . expr_arith < expr_arith
    (20) expr_booleen -> . expr_arith DIFFERENT expr_arith
    (21) expr_booleen -> . expr_arith EGAL_EGAL expr_arith
    (22) expr_booleen -> . expr_booleen OU expr_booleen
    (23) expr_booleen -> . expr_booleen ET expr_booleen
    (24) expr_booleen -> . NON expr_booleen
    (25) expr_booleen -> . FAUX
    (26) expr_booleen -> . VRAI
    (27) expr_booleen -> . expr_arith
    (28) expr_arith -> . somme
    (29) somme -> . produit
    (30) somme -> . somme - produit
    (31) somme -> . somme + produit
    (32) produit -> . facteur
    (33) produit -> . produit % facteur
    (34) produit -> . produit / facteur
    (35) produit -> . produit * facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    )               reduce using rule 48 (listeArgsOpt -> .)
    NON             shift and go to state 19
    FAUX            shift and go to state 20
    VRAI            shift and go to state 21
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    listeArgsOpt                   shift and go to state 36
    listeArgs                      shift and go to state 37
    expr                           shift and go to state 38
    expr_booleen                   shift and go to state 17
    expr_arith                     shift and go to state 18
    somme                          shift and go to state 22
    produit                        shift and go to state 23
    facteur                        shift and go to state 25

state 15

    (11) instruction -> IDENTIFIANT = . expr ;
    (15) expr -> . expr_booleen
    (16) expr_booleen -> . expr_arith SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> . expr_arith INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> . expr_arith > expr_arith
    (19) expr_booleen -> . expr_arith < expr_arith
    (20) expr_booleen -> . expr_arith DIFFERENT expr_arith
    (21) expr_booleen -> . expr_arith EGAL_EGAL expr_arith
    (22) expr_booleen -> . expr_booleen OU expr_booleen
    (23) expr_booleen -> . expr_booleen ET expr_booleen
    (24) expr_booleen -> . NON expr_booleen
    (25) expr_booleen -> . FAUX
    (26) expr_booleen -> . VRAI
    (27) expr_booleen -> . expr_arith
    (28) expr_arith -> . somme
    (29) somme -> . produit
    (30) somme -> . somme - produit
    (31) somme -> . somme + produit
    (32) produit -> . facteur
    (33) produit -> . produit % facteur
    (34) produit -> . produit / facteur
    (35) produit -> . produit * facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    NON             shift and go to state 19
    FAUX            shift and go to state 20
    VRAI            shift and go to state 21
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    expr                           shift and go to state 39
    expr_booleen                   shift and go to state 17
    expr_arith                     shift and go to state 18
    somme                          shift and go to state 22
    produit                        shift and go to state 23
    facteur                        shift and go to state 25

state 16

    (6) instruction -> RETOURNER expr . ;
    ;               shift and go to state 40


state 17

    (15) expr -> expr_booleen .
    (22) expr_booleen -> expr_booleen . OU expr_booleen
    (23) expr_booleen -> expr_booleen . ET expr_booleen
    ;               reduce using rule 15 (expr -> expr_booleen .)
    ,               reduce using rule 15 (expr -> expr_booleen .)
    )               reduce using rule 15 (expr -> expr_booleen .)
    OU              shift and go to state 41
    ET              shift and go to state 42


state 18

    (16) expr_booleen -> expr_arith . SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> expr_arith . INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> expr_arith . > expr_arith
    (19) expr_booleen -> expr_arith . < expr_arith
    (20) expr_booleen -> expr_arith . DIFFERENT expr_arith
    (21) expr_booleen -> expr_arith . EGAL_EGAL expr_arith
    (27) expr_booleen -> expr_arith .
    SUPERIEUR_OU_EGAL shift and go to state 43
    INFERIEUR_OU_EGAL shift and go to state 44
    >               shift and go to state 45
    <               shift and go to state 46
    DIFFERENT       shift and go to state 47
    EGAL_EGAL       shift and go to state 48
    OU              reduce using rule 27 (expr_booleen -> expr_arith .)
    ET              reduce using rule 27 (expr_booleen -> expr_arith .)
    ;               reduce using rule 27 (expr_booleen -> expr_arith .)
    ,               reduce using rule 27 (expr_booleen -> expr_arith .)
    )               reduce using rule 27 (expr_booleen -> expr_arith .)


state 19

    (24) expr_booleen -> NON . expr_booleen
    (16) expr_booleen -> . expr_arith SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> . expr_arith INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> . expr_arith > expr_arith
    (19) expr_booleen -> . expr_arith < expr_arith
    (20) expr_booleen -> . expr_arith DIFFERENT expr_arith
    (21) expr_booleen -> . expr_arith EGAL_EGAL expr_arith
    (22) expr_booleen -> . expr_booleen OU expr_booleen
    (23) expr_booleen -> . expr_booleen ET expr_booleen
    (24) expr_booleen -> . NON expr_booleen
    (25) expr_booleen -> . FAUX
    (26) expr_booleen -> . VRAI
    (27) expr_booleen -> . expr_arith
    (28) expr_arith -> . somme
    (29) somme -> . produit
    (30) somme -> . somme - produit
    (31) somme -> . somme + produit
    (32) produit -> . facteur
    (33) produit -> . produit % facteur
    (34) produit -> . produit / facteur
    (35) produit -> . produit * facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    NON             shift and go to state 19
    FAUX            shift and go to state 20
    VRAI            shift and go to state 21
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    expr_booleen                   shift and go to state 49
    expr_arith                     shift and go to state 18
    somme                          shift and go to state 22
    produit                        shift and go to state 23
    facteur                        shift and go to state 25

state 20

    (25) expr_booleen -> FAUX .
    OU              reduce using rule 25 (expr_booleen -> FAUX .)
    ET              reduce using rule 25 (expr_booleen -> FAUX .)
    ;               reduce using rule 25 (expr_booleen -> FAUX .)
    ,               reduce using rule 25 (expr_booleen -> FAUX .)
    )               reduce using rule 25 (expr_booleen -> FAUX .)


state 21

    (26) expr_booleen -> VRAI .
    OU              reduce using rule 26 (expr_booleen -> VRAI .)
    ET              reduce using rule 26 (expr_booleen -> VRAI .)
    ;               reduce using rule 26 (expr_booleen -> VRAI .)
    ,               reduce using rule 26 (expr_booleen -> VRAI .)
    )               reduce using rule 26 (expr_booleen -> VRAI .)


state 22

    (28) expr_arith -> somme .
    (30) somme -> somme . - produit
    (31) somme -> somme . + produit
    SUPERIEUR_OU_EGAL reduce using rule 28 (expr_arith -> somme .)
    INFERIEUR_OU_EGAL reduce using rule 28 (expr_arith -> somme .)
    >               reduce using rule 28 (expr_arith -> somme .)
    <               reduce using rule 28 (expr_arith -> somme .)
    DIFFERENT       reduce using rule 28 (expr_arith -> somme .)
    EGAL_EGAL       reduce using rule 28 (expr_arith -> somme .)
    OU              reduce using rule 28 (expr_arith -> somme .)
    ET              reduce using rule 28 (expr_arith -> somme .)
    ;               reduce using rule 28 (expr_arith -> somme .)
    ,               reduce using rule 28 (expr_arith -> somme .)
    )               reduce using rule 28 (expr_arith -> somme .)
    -               shift and go to state 50
    +               shift and go to state 51


state 23

    (29) somme -> produit .
    (33) produit -> produit . % facteur
    (34) produit -> produit . / facteur
    (35) produit -> produit . * facteur
    -               reduce using rule 29 (somme -> produit .)
    +               reduce using rule 29 (somme -> produit .)
    SUPERIEUR_OU_EGAL reduce using rule 29 (somme -> produit .)
    INFERIEUR_OU_EGAL reduce using rule 29 (somme -> produit .)
    >               reduce using rule 29 (somme -> produit .)
    <               reduce using rule 29 (somme -> produit .)
    DIFFERENT       reduce using rule 29 (somme -> produit .)
    EGAL_EGAL       reduce using rule 29 (somme -> produit .)
    OU              reduce using rule 29 (somme -> produit .)
    ET              reduce using rule 29 (somme -> produit .)
    ;               reduce using rule 29 (somme -> produit .)
    ,               reduce using rule 29 (somme -> produit .)
    )               reduce using rule 29 (somme -> produit .)
    %               shift and go to state 52
    /               shift and go to state 53
    *               shift and go to state 54


state 24

    (41) facteur -> - . facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    facteur                        shift and go to state 55

state 25

    (32) produit -> facteur .
    %               reduce using rule 32 (produit -> facteur .)
    /               reduce using rule 32 (produit -> facteur .)
    *               reduce using rule 32 (produit -> facteur .)
    -               reduce using rule 32 (produit -> facteur .)
    +               reduce using rule 32 (produit -> facteur .)
    SUPERIEUR_OU_EGAL reduce using rule 32 (produit -> facteur .)
    INFERIEUR_OU_EGAL reduce using rule 32 (produit -> facteur .)
    >               reduce using rule 32 (produit -> facteur .)
    <               reduce using rule 32 (produit -> facteur .)
    DIFFERENT       reduce using rule 32 (produit -> facteur .)
    EGAL_EGAL       reduce using rule 32 (produit -> facteur .)
    OU              reduce using rule 32 (produit -> facteur .)
    ET              reduce using rule 32 (produit -> facteur .)
    ;               reduce using rule 32 (produit -> facteur .)
    ,               reduce using rule 32 (produit -> facteur .)
    )               reduce using rule 32 (produit -> facteur .)


state 26

    (36) facteur -> IDENTIFIANT . ( listeArgsOpt )
    (38) facteur -> IDENTIFIANT .
    (               shift and go to state 56
    %               reduce using rule 38 (facteur -> IDENTIFIANT .)
    /               reduce using rule 38 (facteur -> IDENTIFIANT .)
    *               reduce using rule 38 (facteur -> IDENTIFIANT .)
    -               reduce using rule 38 (facteur -> IDENTIFIANT .)
    +               reduce using rule 38 (facteur -> IDENTIFIANT .)
    SUPERIEUR_OU_EGAL reduce using rule 38 (facteur -> IDENTIFIANT .)
    INFERIEUR_OU_EGAL reduce using rule 38 (facteur -> IDENTIFIANT .)
    >               reduce using rule 38 (facteur -> IDENTIFIANT .)
    <               reduce using rule 38 (facteur -> IDENTIFIANT .)
    DIFFERENT       reduce using rule 38 (facteur -> IDENTIFIANT .)
    EGAL_EGAL       reduce using rule 38 (facteur -> IDENTIFIANT .)
    OU              reduce using rule 38 (facteur -> IDENTIFIANT .)
    ET              reduce using rule 38 (facteur -> IDENTIFIANT .)
    ;               reduce using rule 38 (facteur -> IDENTIFIANT .)
    ,               reduce using rule 38 (facteur -> IDENTIFIANT .)
    )               reduce using rule 38 (facteur -> IDENTIFIANT .)


state 27

    (40) facteur -> ( . expr )
    (15) expr -> . expr_booleen
    (16) expr_booleen -> . expr_arith SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> . expr_arith INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> . expr_arith > expr_arith
    (19) expr_booleen -> . expr_arith < expr_arith
    (20) expr_booleen -> . expr_arith DIFFERENT expr_arith
    (21) expr_booleen -> . expr_arith EGAL_EGAL expr_arith
    (22) expr_booleen -> . expr_booleen OU expr_booleen
    (23) expr_booleen -> . expr_booleen ET expr_booleen
    (24) expr_booleen -> . NON expr_booleen
    (25) expr_booleen -> . FAUX
    (26) expr_booleen -> . VRAI
    (27) expr_booleen -> . expr_arith
    (28) expr_arith -> . somme
    (29) somme -> . produit
    (30) somme -> . somme - produit
    (31) somme -> . somme + produit
    (32) produit -> . facteur
    (33) produit -> . produit % facteur
    (34) produit -> . produit / facteur
    (35) produit -> . produit * facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    NON             shift and go to state 19
    FAUX            shift and go to state 20
    VRAI            shift and go to state 21
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    expr                           shift and go to state 57
    expr_booleen                   shift and go to state 17
    expr_arith                     shift and go to state 18
    somme                          shift and go to state 22
    produit                        shift and go to state 23
    facteur                        shift and go to state 25

state 28

    (37) facteur -> LIRE . ( )
    (               shift and go to state 58


state 29

    (39) facteur -> ENTIER .
    %               reduce using rule 39 (facteur -> ENTIER .)
    /               reduce using rule 39 (facteur -> ENTIER .)
    *               reduce using rule 39 (facteur -> ENTIER .)
    -               reduce using rule 39 (facteur -> ENTIER .)
    +               reduce using rule 39 (facteur -> ENTIER .)
    SUPERIEUR_OU_EGAL reduce using rule 39 (facteur -> ENTIER .)
    INFERIEUR_OU_EGAL reduce using rule 39 (facteur -> ENTIER .)
    >               reduce using rule 39 (facteur -> ENTIER .)
    <               reduce using rule 39 (facteur -> ENTIER .)
    DIFFERENT       reduce using rule 39 (facteur -> ENTIER .)
    EGAL_EGAL       reduce using rule 39 (facteur -> ENTIER .)
    OU              reduce using rule 39 (facteur -> ENTIER .)
    ET              reduce using rule 39 (facteur -> ENTIER .)
    ;               reduce using rule 39 (facteur -> ENTIER .)
    ,               reduce using rule 39 (facteur -> ENTIER .)
    )               reduce using rule 39 (facteur -> ENTIER .)


state 30

    (7) instruction -> TANTQUE ( . expr ) bloc
    (15) expr -> . expr_booleen
    (16) expr_booleen -> . expr_arith SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> . expr_arith INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> . expr_arith > expr_arith
    (19) expr_booleen -> . expr_arith < expr_arith
    (20) expr_booleen -> . expr_arith DIFFERENT expr_arith
    (21) expr_booleen -> . expr_arith EGAL_EGAL expr_arith
    (22) expr_booleen -> . expr_booleen OU expr_booleen
    (23) expr_booleen -> . expr_booleen ET expr_booleen
    (24) expr_booleen -> . NON expr_booleen
    (25) expr_booleen -> . FAUX
    (26) expr_booleen -> . VRAI
    (27) expr_booleen -> . expr_arith
    (28) expr_arith -> . somme
    (29) somme -> . produit
    (30) somme -> . somme - produit
    (31) somme -> . somme + produit
    (32) produit -> . facteur
    (33) produit -> . produit % facteur
    (34) produit -> . produit / facteur
    (35) produit -> . produit * facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    NON             shift and go to state 19
    FAUX            shift and go to state 20
    VRAI            shift and go to state 21
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    expr                           shift and go to state 59
    expr_booleen                   shift and go to state 17
    expr_arith                     shift and go to state 18
    somme                          shift and go to state 22
    produit                        shift and go to state 23
    facteur                        shift and go to state 25

state 31

    (8) instruction -> SI ( . expr ) bloc SINON bloc
    (9) instruction -> SI ( . expr ) bloc
    (15) expr -> . expr_booleen
    (16) expr_booleen -> . expr_arith SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> . expr_arith INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> . expr_arith > expr_arith
    (19) expr_booleen -> . expr_arith < expr_arith
    (20) expr_booleen -> . expr_arith DIFFERENT expr_arith
    (21) expr_booleen -> . expr_arith EGAL_EGAL expr_arith
    (22) expr_booleen -> . expr_booleen OU expr_booleen
    (23) expr_booleen -> . expr_booleen ET expr_booleen
    (24) expr_booleen -> . NON expr_booleen
    (25) expr_booleen -> . FAUX
    (26) expr_booleen -> . VRAI
    (27) expr_booleen -> . expr_arith
    (28) expr_arith -> . somme
    (29) somme -> . produit
    (30) somme -> . somme - produit
    (31) somme -> . somme + produit
    (32) produit -> . facteur
    (33) produit -> . produit % facteur
    (34) produit -> . produit / facteur
    (35) produit -> . produit * facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    NON             shift and go to state 19
    FAUX            shift and go to state 20
    VRAI            shift and go to state 21
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    expr                           shift and go to state 60
    expr_booleen                   shift and go to state 17
    expr_arith                     shift and go to state 18
    somme                          shift and go to state 22
    produit                        shift and go to state 23
    facteur                        shift and go to state 25

state 32

    (13) instruction -> ECRIRE ( . CHAINE ) ;
    (14) instruction -> ECRIRE ( . expr ) ;
    (15) expr -> . expr_booleen
    (16) expr_booleen -> . expr_arith SUPERIEUR_OU_EGAL expr_arith
    (17) expr_booleen -> . expr_arith INFERIEUR_OU_EGAL expr_arith
    (18) expr_booleen -> . expr_arith > expr_arith
    (19) expr_booleen -> . expr_arith < expr_arith
    (20) expr_booleen -> . expr_arith DIFFERENT expr_arith
    (21) expr_booleen -> . expr_arith EGAL_EGAL expr_arith
    (22) expr_booleen -> . expr_booleen OU expr_booleen
    (23) expr_booleen -> . expr_booleen ET expr_booleen
    (24) expr_booleen -> . NON expr_booleen
    (25) expr_booleen -> . FAUX
    (26) expr_booleen -> . VRAI
    (27) expr_booleen -> . expr_arith
    (28) expr_arith -> . somme
    (29) somme -> . produit
    (30) somme -> . somme - produit
    (31) somme -> . somme + produit
    (32) produit -> . facteur
    (33) produit -> . produit % facteur
    (34) produit -> . produit / facteur
    (35) produit -> . produit * facteur
    (36) facteur -> . IDENTIFIANT ( listeArgsOpt )
    (37) facteur -> . LIRE ( )
    (38) facteur -> . IDENTIFIANT
    (39) facteur -> . ENTIER
    (40) facteur -> . ( expr )
    (41) facteur -> . - facteur
    CHAINE          shift and go to state 61
    NON             shift and go to state 19
    FAUX            shift and go to state 20
    VRAI            shift and go to state 21
    IDENTIFIANT     shift and go to state 26
    LIRE            shift and go to state 28
    ENTIER          shift and go to state 29
    (               shift and go to state 27
    -               shift and go to state 24

    expr                           shift and go to state 62
    expr_booleen                   shift and go to state 17
    expr_arith                     shift and go to state 18
    somme                          shift and go to state 22
    produit                        shift and go to state 23
    facteur                        shift and go to state 25

state 33

    (4) instruction -> type IDENTIFIANT ( . listeParamsOpt ) bloc
    (49) listeParamsOpt -> . listeParams
    (50) listeParamsOpt -> .
    (51) listeParams -> . listeParams , type IDENTIFIANT
    (52) listeParams -> . type IDENTIFIANT
    (42) type -> . BOOLEEN_TYPE
    (43) type -> . ENTIER_TYPE
    )               reduce using rule 50 (listeParamsOpt -> .)
    BOOLEEN_TYPE    shift and go to state 10
    ENTIER_TYPE     shift and go to state 11

    type                           shift and go to state 63
    listeParamsOpt                 shift and go to state 64
    listeParams                    shift and go to state 65

state 34
